# omgine

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  main.ilk  todo.txt
API_Reference_SDL/: SDL_Image.txt  SDL_QuickReference.txt
assets/images/: blue.ase  blue.aseprite
samples/: drawTexture.cpp
